<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nubes"
    android:padding="3dp"
    tools:context="com.example.boxrun.Pantalla_tienda" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="543dp"
                android:background="@drawable/nubes"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp" >

                        <ImageView
                            android:id="@+id/ImageView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:src="@drawable/moneda" />

                        <TextView
                            android:id="@+id/tienda_dinero_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginTop="2dp"
                            android:text="Dinero"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="80dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/Tienda_titulo"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/Blanco" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black_overlay"
                        android:dividerPadding="20dp"
                        android:padding="5dp" >

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="3dp"
                            android:background="@color/black_overlay"
                            android:padding="3dp" >

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="1dp"
                                android:layout_marginRight="1dp"
                                android:background="@color/black_overlay"
                                android:padding="5dp"
                                android:src="@drawable/tienda_icono_escudo" />
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:layout_marginLeft="100dp"
                                android:layout_marginRight="100dp"
                                android:text="@string/Tienda_escudo_titulo"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <RatingBar
                                android:id="@+id/ratingBar1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:clickable="false" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.70"
                            android:orientation="vertical" >

                            <Button
                                android:id="@+id/buttonMejorarIman"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="15dp"
                                android:background="@color/Azul_celeste"
                                android:onClick="mejorarEscudo"
                                android:text="Mejorar" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal" >

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginRight="2dp"
                                    android:src="@drawable/moneda" />

                                <TextView
                                    android:id="@+id/dineroEscudo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4dp"
                                    android:layout_marginRight="4dp"
                                    android:layout_marginTop="2dp"
                                    android:text="Dinero"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black_overlay"
                        android:dividerPadding="20dp"
                        android:padding="5dp" >

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="3dp"
                            android:background="@color/black_overlay"
                            android:padding="0dp" >

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="1dp"
                                android:layout_marginRight="1dp"
                                android:background="@color/black_overlay"
                                android:padding="5dp"
                                android:src="@drawable/tienda_icono_fuego" />
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:layout_marginLeft="100dp"
                                android:layout_marginRight="100dp"
                                android:text="@string/Tienda_fuego_titulo"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <RatingBar
                                android:id="@+id/ratingBar2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:clickable="false" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.70"
                            android:orientation="vertical" >

                            <Button
                                android:id="@+id/buttonMejorarFuego"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="15dp"
                                android:background="@color/Azul_celeste"
                                android:onClick="mejorarLLama"
                                android:text="Mejorar" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal" >

                                <ImageView
                                    
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginRight="2dp"
                                    android:src="@drawable/moneda" />

                                <TextView
                                    android:id="@+id/dineroLlama"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4dp"
                                    android:layout_marginRight="4dp"
                                    android:layout_marginTop="2dp"
                                    android:text="Dinero"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
